--- a/package.json
+++ b/package.json
@@ -7,20 +7,34 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "npx  json-server db.json",
+    "server2": "npx json-server --watch ./db.json --port 5050"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.18",
+    "@reduxjs/toolkit": "^2.2.5",
     "autoprefixer": "^10.4.19",
+    "bootstrap": "^5.3.3",
     "json-server": "^1.0.0-beta.0",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-image-gallery": "^1.3.0",
+    "react-redux": "^9.1.2",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
     "react-slider": "^2.0.6",
+    "react-toastify": "^10.0.5",
     "swiper": "^11.1.3",
     "tailwindcss": "^3.4.3"
   },
