--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-image-gallery": "^1.3.0",
     "react-redux": "^9.1.2",
     "react-router": "^6.23.1",
